# chinese-warriors

./: .gitignore  Cargo.toml  Makefile  README.md  codegen.py
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-pages.yml
assets/: GrassBorder.rar  default.config  default.config.ron  index.html  terrain-tileset.xcf
assets/Terrain/Grass/: Decoration.rar
assets/art/hero/guri/: Guri.aseprite
assets/art/mob/mosquito/: mosquito.aseprite
assets/config/: debug_world.config.ron  world.config.ron  world.default.config.ron
docs/: asset_folder_considerations.excalidraw  border_system.md
src/: camera.rs  helpers.rs  lib.rs  main.rs
src/app/: mod.rs
src/assets/: aseprite.rs  asset_reloader.rs  fonts.rs  game.rs  mod.rs  textures.rs  timers.rs
src/assets/config/: default.rs  live_updater.rs  mod.rs  structs.rs
src/assets/config/default/: biome.rs  mod.rs  terrain.rs
src/assets/textures/: loaders.rs  mod.rs
src/collision/: mod.rs  terrain.rs
src/console/: mod.rs
src/game/: asset_reloader.rs  fpscounter.rs  mod.rs  setup.rs  timed_console_stats.rs  types.rs  window_title.rs
src/game/hero/: mod.rs  util.rs
src/game/terrain/: frustum_culling.rs  mod.rs
src/hero/: animation.rs  current_tile.rs  mod.rs  movement.rs  spawner.rs  structs.rs
src/hud/: mod.rs  spawner.rs  window_title.rs
src/input/: camera.rs  hero.rs  mod.rs  mouse_input.rs
src/mob/: mod.rs  mosquito.rs
src/plugins/: console.rs  hero.rs  hud.rs  mod.rs  startup.rs
src/shadow/: add_shadow.rs  mod.rs  structs.rs
src/systems/: mod.rs
src/systems/console/: mod.rs
src/systems/hero/: mod.rs  spawner.rs  types.rs
src/systems/hud/: mod.rs  spawner.rs  window_title.rs
src/systems/input/: mod.rs
src/systems/resources/: fonts.rs  game.rs  mod.rs  textures.rs
src/systems/world/: mod.rs  spawner.rs
src/systems/world/spawner/: mod.rs  util.rs
src/systems/world/tile/: border.rs  builder.rs  mod.rs  position.rs  traits.rs  visibility.rs
src/systems/world/tile/terrain/: generator.rs  mod.rs
src/utilities/: config.rs  mod.rs  xy.rs
src/world/: despawner.rs  mod.rs  spawner.rs
src/world/spawner/: drawer.rs  instruction.rs  mod.rs
src/world/spawner/drawer/: draw_functions.rs  mod.rs
src/world/tile/: builder.rs  chunk.rs  mod.rs  position.rs  traits.rs  visibility.rs
src/world/tile/border/: mod.rs  neighbor.rs  structs.rs
src/world/tile/terrain/: biomes.rs  generator.rs  mod.rs  noise.rs
src/world/tile/terrain/generator/: mod.rs  util.rs
web/: index.html
