[package]
name = "chinese-warriors"
version = "0.1.0"
edition = "2021"
default-run = "chinese-warriors"

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
bevy_ase = { git = "https://github.com/flipbit03/bevy_ase.git", rev = "ec7aa18dd20b8e926cd0747985034afe1315c0b4", features = [
  "benimator",
] }
benimator = "3.3.0"
bevy = { version = "0.7.0" }
noise = "0.7.0"
strum = { version = "0.24", features = ["derive"] }
itertools = "0.10.3"
bevy_asset_ron = "0.4.0"
serde = "1"
ron = "0.7"
iyes_loopless = { git = "https://github.com/IyesGames/iyes_loopless.git", rev = "452c5737b123eea8aebb0e973293c9eb6ba65c8b" }
bevy-web-resizer = "2.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }

# Enable only a small amount of optimizations in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
