[package]
name = "chinese-warriors"
version = "0.1.0"
edition = "2021"
default-run = "chinese-warriors"

[dependencies]
# benimator = { path = "../benimator", version = "0.0.0-dev" }
# bevy_ase = { path = "../bevy_ase", features = ["benimator"] }

clap = { version = "4.3.12", features = ["derive"] }
bevy_ase = { git = "https://github.com/flipbit03/bevy_ase.git", rev = "f8120c175cdd4f5cea45e1fc474ad596e2e821bf", features = [
  "benimator",
] }
benimator = "4.1.3"
bevy = { version = "0.11.0" }
noise = "0.8.2"
strum = { version = "0.25", features = ["derive"] }
itertools = "0.11.0"
bevy_common_assets = "0.7"
serde = "1"
ron = "0.8.0"
#iyes_loopless = { git = "https://github.com/IyesGames/iyes_loopless.git", rev = "452c5737b123eea8aebb0e973293c9eb6ba65c8b" }
bevy-web-resizer = "4.0.1"

# Use this when debugging with `gdb`
#bevy = { version = "0.7.0" }

# Enable only a small amount of optimizations in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
