[package]
name = "chinese-warriors"
version = "0.1.0"
edition = "2021"
default-run = "chinese-warriors"

[dependencies]
bevy = "0.18.1"
noise = "0.9"
strum = { version = "0.26", features = ["derive"] }
itertools = "0.13"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.18.1", features = ["dynamic_linking"] }

# Enable only a small amount of optimizations in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
